# top-inventory

./: README.md  api.code-workspace  ui.code-workspace
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 666f466f4957_soft_delete_timestamp.py  dd4c6b9c5f04_add_timestamps.py
apps/api/app/: main.py
apps/api/app/core/: env.py  settings.py
apps/api/app/core/dependencies/: db.py  mutation_token.py
apps/api/app/db/: __init__.py  categories.py  item_types.py  items.py  models.py
apps/api/app/lib/: fastapi_helpers.py
apps/api/app/lib/fastapi/: responses.py
apps/api/app/lib/http/: auth.py
apps/api/app/lib/python/: typing.py
apps/api/app/lib/sqlmodel/: timestamps.py
apps/api/app/routes/categories/: __init__.py  edit_category.py  get_categories.py  new_category.py  remove_category.py  validations.py
apps/api/app/routes/item_types/: __init__.py  new_item_type.py
apps/ui/: .cta.json  biome.json  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/ui/src/: main.tsx  routeTree.gen.ts  styles.css
apps/ui/src/core/: env.ts
apps/ui/src/core/api/: categories.ts
apps/ui/src/core/components/: Button.tsx  Card.tsx  Input.tsx  Label.tsx  Loading.tsx  Screen.tsx
apps/ui/src/core/errors/: ErrorScreen.tsx
apps/ui/src/core/not-found/: NotFoundScreen.tsx
apps/ui/src/core/styles/: main.css
apps/ui/src/core/tanstack-query/: QueryClient.tsx
apps/ui/src/lib/: fetchers.ts  tailwind.ts  theme.ts  utils.ts
apps/ui/src/routes/: __root.tsx  index.tsx
(+27 files in other folders)
