[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydash>=8.0.5",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
]
